# vitriolic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  BULK_DIVISIONS_DOCUMENTATION.md  CLAUDE.md  ISSUES.md  LICENSE  MANIFEST.in  MCP_INTEGRATION.md  README.md  README.rst  ghetto.py  manual_test_bulk_divisions.py  pyproject.toml  renovate.json  setup.cfg  setup.py  test_bulk_divisions.py  tox.ini  validate_bulk_divisions.py
.github/: copilot-instructions.md  release.yml
.github/workflows/: claude.yml  copilot-setup-steps.yml  django.yml  e2e-tests.yml  mobile.yml  pypi-publish.yml  renovate.yml
docs/: live-stream-templates.md
e2e_tests/: README.md  __init__.py  celery.py  conftest.py  docker-compose.yml  factories.py  manage.py  pytest.ini  run_tests.sh  settings.py  test_admin_flow.py  test_visual_scheduler_performance.py  validate_setup.py  workflow.yml
examples/: youtube_thumbnail_example.py
src/mobile/: pubspec.yaml
src/mobile/lib/: main.dart  models.dart  services.dart
src/mobile/test/: widget_test.dart
tests/: .coveragerc  .gitignore  README.md  constraints-dj20.txt  constraints-dj21.txt  constraints-dj22.txt  constraints-dj30.txt  constraints-dj31.txt  constraints-dj32.txt  constraints-dj40.txt  manage.py  pytest.ini  test_admin_flow.py  test_playwright.py  test_visual_scheduler_performance.py
tests/e2e/: __init__.py  conftest.py  test_admin_flow.py  test_division_color_bulk_update.py  test_htmx_admin_tabs.py  test_live_stream_event.py  test_match_live_stream.py  test_mcp_client.py  test_playwright.py  test_stage_reordering.py  test_visual_scheduler_colors.py  test_visual_scheduler_performance.py
tests/example_app/: __init__.py  forms.py  models.py  sites.py  urls.py  views.py
tests/example_app/fixtures/: query_string.json
tests/example_app/tests/: factories.py
tests/vitriolic/: __init__.py  constance_backend.py  settings.py  urls.py  wsgi.py
touchtechnology/: __init__.py
touchtechnology/admin/: __init__.py  apps.py  base.py  forms.py  mixins.py
touchtechnology/admin/sites/: __init__.py  admin.py  auth.py  settings.py
touchtechnology/admin/templates/: 403.html  404.html  40x.html
touchtechnology/admin/templatetags/: admin.py  mvp_tags.py
touchtechnology/admin/tests/: test_auth_site.py  test_authentication.py  test_htmx_tabs.py  test_mptt_order.py  test_mvp_tags.py
touchtechnology/common/: __init__.py  apps.py  checks.py  context_processors.py  debugging.py  decorators.py  default_settings.py  exceptions.py  fields.py  forms.py  forms_lazy.py  middleware.py  mixins.py  models.py  prince.py  routers.py  sitemaps.py  sites.py  storage.py  translate.py  urls.py  utils.py  views.py
touchtechnology/common/backends/: __init__.py  auth.py  cache.py
touchtechnology/common/db/: models.py
touchtechnology/common/forms/: __init__.py  auth.py  constants.py  fields.py  icheck.py  iter.py  mixins.py  tz.py  widgets.py
touchtechnology/common/migrations/: 0001_initial.py  0002_sitemapnode_last_modified.py  0003_drop_pythonpackage.py  0004_sitemapnode_kwargs.py  0005_sitemapnode_populate_kwargs.py  0006_alter_fields_to_match_definition.py  0006_model_definition_sync.py  0007_auto_20220808_1144.py
touchtechnology/common/rest/: README.md  urls.py  views.py
touchtechnology/common/shim/: widgets.py
touchtechnology/common/static/: sitemap.xsl
touchtechnology/common/templates/: 404.html  500.html  _base.html  base.html  http4xx.html  http5xx.html  sitemap.xml
touchtechnology/common/templatetags/: common.py  dashboard.py
touchtechnology/common/tests/: factories.py  forms.py  test_appcache.py  test_authentication.py  test_fields.py  test_forms.py  test_generic_views.py  test_models.py  test_pagination.py  test_rest_api_discoverability.py  test_rest_api_optional_apps.py  test_rest_api_permissions.py  test_sitemaps.py  test_storage.py  test_templates.py  test_timezone.py  test_timezone_forms.py  test_utils.py
touchtechnology/content/: __init__.py  admin.py  app_settings.py  apps.py  forms.py  middleware.py  models.py  utils.py  views.py
touchtechnology/content/migrations/: 0001_initial.py  0002_last_modified.py  0003_auto_20160831_0608.py  0004_remove_placeholderkeywordargument.py  0005_alter_fields_to_match_definition.py  0005_model_definition_sync.py  0006_chunk_safe.py
touchtechnology/content/templatetags/: content.py
touchtechnology/content/tests/: factories.py  test_admin.py  test_middleware.py
touchtechnology/news/: __init__.py  admin.py  app_settings.py  apps.py  decorators.py  forms.py  image_processors.py  models.py  query.py  sites.py  syndication.py
touchtechnology/news/migrations/: 0001_initial.py  0002_article_last_modified.py  0003_category_last_modified.py  0004_alter_fields_to_match_definition.py  0004_model_definition_sync.py  0004_normalise_news.py  0005_auto_20191122_1340.py  0005_content_arrayfields.py  0006_article_copy_field.py  0006_content_arrayfields_data.py  0007_article_copy_field_data.py  0007_auto_20170926_0847.py  0008_delete_articlecontent.py  0009_translation.py  0010_migrate_unique_together_to_constraints.py
touchtechnology/news/rest/: README.md  urls.py
touchtechnology/news/templatetags/: news.py
touchtechnology/news/tests/: factories.py  test_admin.py  test_decorators.py  test_rest_api.py  test_site.py
tournamentcontrol/: __init__.py
tournamentcontrol/competition/: __init__.py  _mediaupload.py  admin.py  ai.py  ai_executor.py  apps.py  calc.py  checks.py  constants.py  consumers.py  context_processors.py  dashboard.py  decorators.py  draw.py  events.py  exceptions.py  fields.py  forms.py  managers.py  mcp.py  media.py  merge.py  mixins.py  models.py  query.py  rank.py  sitemaps.py  sites.py  sportingpulse.py  sql.py  tasks.py  thumbnail_utils.py  utils.py  validators.py  wizards.py
tournamentcontrol/competition/ai/: SYSTEM_PROMPT.md  __init__.py  executor.py  ollama.py  schemas.py
tournamentcontrol/competition/draw/: __init__.py  algorithms.py  builders.py  generators.py  (+1 more)
tournamentcontrol/highlights/: __init__.py  admin.py  apps.py  constants.py  forms.py  models.py
(+532 files in other folders)
