[project]
name = "vitriolic"
urls = { "Source Code" = "https://github.com/goodtune/vitriolic" }
description = "A suite of packages for the Django framework to provide integrated Content Management and Sports Administration functionality for sporting associations."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { "name" = "Gary Reynolds", "email" = "gary@touch.asn.au" }
]
classifiers = []
requires-python = ">=3.11,<3.15"
dependencies = [
    "django-froala-editor>=2.9",
    "django-guardian>=2.4",
    "django-mcp-server>=0.5.5",
    "django-modelforms",
    "django-mptt",
    "django-timezone-field",
    "django>=4.2",
    "first",
    "namedentities",
    "psycopg",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.8",
]
test = [
    "coverage",
    "django-environ",
    "django-test-plus",
    "factory_boy",
    "freezegun",
    "mcp",
    "packaging>=25.0",
    "playwright",
    "pytest-asyncio",
    "pytest-django",
    "pytest-playwright",
    "pytest",
    "requests",
    "tblib",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
admin = ["django-bootstrap3", "django-gravatar2"]
common = []
content = []
news = [
    "babel",
    "django-imagekit",
    "python-dateutil",
    "python-magic",
]
competition = [
    "pydantic>=2.0",
    "celery>5",
    "cloudinary",
    "django-embed-video",
    "django-filter",
    "django-formtools",
    "django-htmx>=1.23.2",
    "django-mathfilters",
    "djangorestframework>3.11",
    "drf-nested-routers",
    "google-api-python-client",
    "google-auth-oauthlib",
    "icalendar",
    "internationaltouch-oauth2client",
    "markdown",
    "pyparsing",
    "python-dateutil",
    "python-magic",
]
# Deprecated optional dependencies
redis = []

[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["touchtechnology*", "tournamentcontrol*"]

[tool.setuptools_scm]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
multi_line_output = 5

[tool.black]
line-length = 88
target-version = ["py39", "py312"]

[tool.ruff]
line-length = 88

[tool.uv]
prerelease = "if-necessary-or-explicit"
